fix: menu page color and alignment

--- a/src/Component/menu/menuDisplay.css
+++ b/src/Component/menu/menuDisplay.css
@@ -1,28 +1,64 @@
 #theContainer{
 
-    background-color: chocolate;
+    /* background-color: rgb(255, 255, 0); */
+    display:block;
+    border: solid 1px pink;;
 }
 
 #contenta{
     
-    background-color: brown;
-    padding:10px;
-    width:100%;
-    margin:20px;
+    /* background-color: rgb(255, 255, 255); */
+    display:inline;
+    padding:5px;
+    /* width:35%; */
+    margin:10px;
 }
 
 .menucontainer{
     border:1px solid black;
-    height:600px;
-    width:100%;
-    background-color: honeydew;
-    display:block;
-    margin:5px;
+    height:25%;
+    width:42%;
+    border-radius:20px;
+    /* background-color: honeydew; */
+    display:inline-block;
+    margin:2%;
+    padding:5%;
+    transition: all 0.3s ease;
+}
+
+.menucontainer:hover{
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    transform: translateY(-5px);
+    cursor:pointer;
+
+}
+
+.menuDetails{
+    display:inline-block;
+    width:40%;
+    height:300px;
+    /* background-color: rgb(255, 255, 255); */
+    margin:10px;
+    padding:10px;
+}
+
+.thumbnailcontainer{
+    display:inline-block;
+    width:90%;
+    /* height:300px; */
+    /* background-color: rgb(255, 255, 255); */
+    margin:10px;
+    padding:10px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .menuthumb{
-    width:250px;
-    margin:20px;
+    width:80%;
+    height:50%;
+    margin:10px;
+    border-radius:20px;
 }
 
 #thisisthe{
@@ -32,5 +68,49 @@
 
 .menuparts{
     font-family: 'Comfortaa', sans-serif;
-    font-size: large;
+    /* font-size: large; */
+}
+
+.listingtitlecontainer{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+#listingtitle{
+    margin-top: 2%;
+    margin-bottom: 2%;
+    font-family: 'Comfortaa', sans-serif;
+    color: #192f60;
+    display:inline-block;
+    width:30%;
+    text-align: center;
+    /* border:solid 1px black; */
+}
+
+.patternleft{
+    width: 200px;
+    /* border:solid 1px black; */
+    display:inline;
+    /* position: absolute; */
+    left: 0;
+    /* top: 50%; */
+}
+
+.patternright{
+    width: 200px;
+    display:inline;
+    /* position: absolute; */
+    right: 0;
+    /* top: 50%; */
+}
+
+.menudescription{
+    font-family: 'Comfortaa', sans-serif;
+    text-align: justify ;
+    padding:3%;
+    margin:10px;
+    border-radius:10px;
+    width:100%;
 }
